[package]
name = "etherst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.0", features = ["ws"] }
# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
teloxide = { version = "0.12", features = ["macros"] }
lazy_static = "1.4.0"
dotenvy = "0.15.7"
hex = "0.4.3"
